plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.7'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'hamilton108'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation project(':oahu')
	implementation project(':vega')

	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	// implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	//implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'redis.clients:jedis:4.3.2'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
	implementation 'com.google.guava:guava:31.1-jre'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.6'

	//implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
	//implementation 'ch.qos.logback:logback-classic:1.2.10'

	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'

}

tasks.named('test') {
	useJUnitPlatform()
}
